terraform_aws/tp6/modules/ec2module/main.tf
data "aws_ami" "mydata" {
  most_recent = true
  owners      = ["amazon"]

  filter {
    name   = "name"
    values = ["amzn2-ami-hvm-*"]
  }

}

resource "aws_instance" "myec2" {
  ami           = data.aws_ami.mydata.id
  instance_type = "${var.myinstance}"
  key_name      = "devops-abdoul"

  security_groups = ["${aws_security_group.allow_traffic.name}"]

  tags = var.mytag

  root_block_device {
    delete_on_termination = true
  }

  provisioner "local-exec" {
    command = "echo PUBLIC IP EC2 ${aws_instance.myec2.public_ip} >> infos_ec2.txt"
  }

  provisioner "remote-exec" {
    inline = [
      "sudo amazon-linux-extras install -y nginx1.12",
      "sudo systemctl start nginx"
    ]
    connection {
      type     = "ssh"
      user     = "ec2-user"
      private_key = file("./devops-abdoul.pem")
      host     = self.public_ip
      timeout     = "1m"
    }
  }

}

resource "aws_security_group" "allow_traffic" {
  name        = var.mysecgroup
  description = "Allow ssh, http and https inbound traffic"

  ingress {
    description = "https from VPC"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "http from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "ssh from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_eip" "lb" {
  instance = aws_instance.myec2.id
  vpc      = true

  provisioner "local-exec" {
    command = "echo PUBLIC EIP ${aws_eip.lb.public_ip} >> infos_ec2.txt"
  }

}
